@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added fix for RTE loading in Resource panel, should fix most RTE saving bugs
 - Added collapsibility to Document panel
 - Added 'concat_js' system setting that will concat all the common JS files into one single file
 - Adjusted lang.js.php to properly use ETag header to cache lang js
